Messed with UnitTests
Committing only to revert

--- a/A Walk/Assets/Scripts/Scripts.asmdef
+++ b/A Walk/Assets/Scripts/Scripts.asmdef
@@ -2,11 +2,14 @@
     "name": "Scripts",
     "references": [],
     "includePlatforms": [],
-    "excludePlatforms": [],
+    "excludePlatforms": [
+        "Editor"
+    ],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": []
+    "versionDefines": [],
+    "noEngineReferences": false
 }
