--- a/A Walk/Assets/Scripts/Tests/Tests.asmdef
+++ b/A Walk/Assets/Scripts/Tests/Tests.asmdef
@@ -5,7 +5,7 @@
         "UnityEditor.TestRunner",
         "Scripts"
     ],
-    "includePlatforms": [],
+    "includePlatforms": ["Editor"],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
