Revert "Messed with UnitTests"
This reverts commit 492a29644c260258f800e702619bc198b4f27cb3.

--- a/A Walk/Assets/Scripts/Tests/Tests.asmdef
+++ b/A Walk/Assets/Scripts/Tests/Tests.asmdef
@@ -5,7 +5,7 @@
         "UnityEditor.TestRunner",
         "Scripts"
     ],
-    "includePlatforms": ["Editor"],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": true,
