--- a/A Walk/Assets/Scripts/Scripts.asmdef
+++ b/A Walk/Assets/Scripts/Scripts.asmdef
@@ -2,14 +2,11 @@
     "name": "Scripts",
     "references": [],
     "includePlatforms": [],
-    "excludePlatforms": [
-        "Editor"
-    ],
+    "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
-    "noEngineReferences": false
+    "versionDefines": []
 }
