--- a/A Walk/Packages/manifest.json
+++ b/A Walk/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.jimmycushnie.noisynodes": "file:E:/Downloads/Noisy-Nodes-master",
+    "com.jimmycushnie.noisynodes": "file:../Noisy-Nodes-master",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "2.0.8",
@@ -10,6 +10,7 @@
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.1.4",
     "com.unity.multiplayer-hlapi": "1.0.4",
+    "com.unity.postprocessing": "2.3.0",
     "com.unity.purchasing": "2.0.6",
     "com.unity.render-pipelines.lightweight": "7.3.1",
     "com.unity.test-framework": "1.1.13",
