--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,9 @@
 
 # Whitelisted directories/files
 !/ProjectSettings/
-               # Add Assets folder, but ...
-                # Remove everything under Assets again.
-!/Assets/_Scripts/         # Now add back our core game folders.
+!/Assets/                # Add Assets folder, but ...
+/Assets/*                # Remove everything under Assets again.
+!/Assets/Scripts/          # Now add back our core game folders.
 
 
 # Any modules kept in their own git repo.
